# video-crawler-ai

./: .env.example  .gitignore  AGENTS.md  CODEX_PROMPT.md  CONSTRAINTS.md  Dockerfile  HANDOFF.md  MANIFEST.json  Makefile  README.md  alembic.ini  compose.yaml  export_openapi.py  pyproject.toml
docs/: api-contract.md  manual-test-runbook.md  operations-outline.md  operations.md  security-and-compliance.md  state-machines.md  testing-strategy.md
docs/architecture/: adapter-contract.md  database-schema.md
docs/specs/: 2026-07-19-video-crawler-design.md
docs/superpowers/plans/: 2026-07-19-video-crawler-platform.md  2026-07-22-empty-discovery-profile-guard.md  2026-07-22-worker-profile-verification.md
docs/superpowers/specs/: 2026-07-22-empty-discovery-profile-guard-design.md  2026-07-22-worker-profile-verification-design.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_profile_verifications.py
prompts/: codex-review.md  codex-task-template.md
sql/: reference_schema.sql
src/video_crawler/: __init__.py  bootstrap.py  cli.py  main.py
src/video_crawler/adapters/: __init__.py  base.py  registry.py
src/video_crawler/api/: errors.py  router.py
src/video_crawler/application/: __init__.py  auth_profiles.py  cursors.py  gateways.py  health.py  jobs.py  module_runner.py  pipeline.py  rate_limit.py  raw_artifacts.py  (+1 more)
tests/acceptance/: test_contracts.py
tests/api/: test_api_key.py  test_auth_profiles.py  test_health.py  test_jobs.py  test_result_queries.py
tests/integration/: conftest.py  test_end_to_end_fake_adapter.py
tests/unit/: test_cli.py  test_config.py
(+107 files in other folders)
