[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-crawler"
version = "0.1.0"
description = "Generic video-site metrics, comments, danmaku and subtitle crawler"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.13,<2",
  "asyncmy>=0.2,<1",
  "crawl4ai>=0.9.2,<1",
  "fastapi>=0.139,<1",
  "httpx>=0.27,<1",
  "minio>=7.2,<8",
  "orjson>=3.10,<4",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy[asyncio]>=2.0.51,<2.1",
  "structlog>=24,<26",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<7",
  "respx>=0.21,<1",
  "ruff>=0.8,<1",
  "testcontainers[mysql,minio]>=4.8,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/video_crawler"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires local containers",
  "manual: requires a real browser profile and explicit opt-in",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["video_crawler"]
plugins = ["pydantic.mypy"]

[tool.coverage.run]
branch = true
source = ["video_crawler"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
